# mini-jvm

./: CMakeLists.txt  README.md
include/: bl_interp.h  class_file.h  class_loader.h  common.h  gc_heap.h  vm.h
java_stuff/: NativeTest.java
src/: bl_interp.cpp  class_file.cpp  class_loader.cpp  main.cpp
